Minor optimization and minor bug fix which doesn't affect functionality
  -- Better way of converting stream to list, using stream.toList method
now instead of collect(Collectors.toList()).
  -- Minor bug fix in FileUtil.removeDirRecursively method. This bug
doesn't affect functionality of the method.